--- a/content/w6.html
+++ b/content/w6.html
@@ -142,7 +142,20 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w6</h1>
-<br />HW << <a href='HW.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<p>各零件繪製過程</p>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/w6 6203RS Bearing_step.mp4" type="video/mp4"/></video></div><br />HW << <a href='HW.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
