--- a/content/About.html
+++ b/content/About.html
@@ -143,8 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
 <p>cmsite</p>
-<p><br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/index.html">https://mdecad2022.github.io/site-Bored1236/content/index.html</a><br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p>
-<br /> <a href='HW.html'>Next</a> >> HW</div>
+<p><br/>個人網址：<a href="https://mdecad2022.github.io/site-41023226/content/index.html">https://mdecad2022.github.io/site-41023226/content/index.html</a><br/>個人倉儲：<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p><br /> <a href='HW.html'>Next</a> >> HW</div>
         
     <!-- footer -->
       <div class="container">
