--- a/content/w14.html
+++ b/content/w14.html
@@ -175,6 +175,7 @@ frameStops: {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass">oneshape繪圖過程影片</div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/3e3418c081ab1340232f2206/w/e58760e5095d07985ad4e2a3/e/1f50ff4b7da355f502de1cf4">shaft</a></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape.mp4" type="video/mp4"/></video></div>
 <script>
@@ -188,7 +189,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/844e6ac45fcbe0eea81da10d/w/3c0f497751155119ef9e469f/e/61818a2703ef01f5621c2ee1">link</a></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape-1.mp4" type="video/mp4"/></video></div>
 <script>
@@ -202,7 +203,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/5170eadfa7ddb78061cc8cdc/w/cb1c9c0736dfee5fc7a968f0/e/beb15d8b15f63a230e5fee2e">base</a></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape-2.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">solvespace繪圖過程影片</div>
@@ -302,8 +303,7 @@ var winkVideoData_40923151 = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
+<div class="winkVideoContainerClass"></div><br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
